Fix log record leak and harden regression tests
AsyncLogRecord now clears its dejaVu set when a record chain ends.
The set accumulated every distinct Throwable ever logged on a carrier
thread for the JVM lifetime and printed [CIRCULAR REFERENCE] for
recycled thread-local exceptions; the unused getDejaVu() accessor is
gone.

WalPurgeJob.Logic.run() advances the unlock walk index before calling
deleter.unlock(), so a throwing unlock is attempted exactly once
instead of being retried by the finally with a misleading error log.

LogAlertSocket computes reconnectDelayMillis once in the constructor;
the fail-over log line and onReconnect() can no longer disagree.

WalPurgeJobTest gains regression coverage for the purge-lock account
keeping: testSegmentScanFailureReleasesLocks reproduces the partial
tracking bug end to end (it releases the writer first, since only the
exclusive-lock path encodes segments with positive ids and makes the
broken stride walk observable), the delete-throws test resumes the
walk mid-list past a sequencer part, and two new tests pin the
single-unlock-attempt contract and the per-entry containment in
releaseLocks(). TestDeleter records unlocks in a shared IntList.

LogAlertSocketTest drives the single-host reconnect through the real
send loop on a bounded helper thread, so a broken nanos-to-millis
conversion fails the test instead of hanging the fork.

OsTest.testSleepDoesNotBlockSafepoints now proves System.gc()
completes while the peer is still inside Os.sleep and asserts the
observed stack has no Thread.sleep frame, which detects a revert of
the sleep binding under any JIT. testAffinity drops an assertion that
could not fail, testSleepEnds starts its clock at the barrier, and
the latch tests coordinate phases through a CountDownLatch and
initialize Os outside the measured CPU window.

The ThreadSleepEvent regression dates to JDK 24, not JDK 25; comments
and the benchmark javadoc now say so. OsSleepBenchmark passes
--enable-native-access to all 